<resources>
    <string name="app_name">Calculator</string>

    <string name="zero">%1$s0</string>
    <string name="one">%1$s1</string>
    <string name="two">%1$s2</string>
    <string name="three">%1$s3</string>
    <string name="four">%1$s4</string>
    <string name="five">%1$s5</string>
    <string name="six">%1$s6</string>
    <string name="seven">%1$s7</string>
    <string name="eight">%1$s8</string>
    <string name="nine">%1$s9</string>
    <string name="dot">%1$s.</string>
    <string name="_0_0">0.0</string>
    <string name="c">C</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="multiply">*</string>
    <string name="_0">0</string>
    <string name="comma">.</string>
    <string name="equal">=</string>
    <string name="divide">/</string>
</resources>