<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/_0_0"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/_0_0"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num1" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:text="@string/c"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btnPlus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnPlus"
        app:layout_constraintTop_toBottomOf="@+id/tv_num2" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pressDigit"
        android:text="@string/_7"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pressDigit"
        android:text="@string/_8"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn9"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pressDigit"
        android:text="@string/_9"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPlus"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="clickOperation"
        android:text="@string/plus"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/bynMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintStart_toStartOf="@+id/bynMinus"
        app:layout_constraintTop_toBottomOf="@+id/btnC"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pressDigit"
        android:text="@string/_4"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pressDigit"
        android:text="@string/_5"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pressDigit"
        android:text="@string/_6"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/bynMinus"
        app:layout_constraintEnd_toStartOf="@+id/bynMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/bynMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="clickOperation"
        android:text="@string/minus"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btnMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintStart_toStartOf="@+id/btnMultiply"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="pressDigit"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pressDigit"
        android:text="@string/_2"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn3"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pressDigit"
        android:text="@string/_3"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnMultiply"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="clickOperation"
        android:text="@string/multiply"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btnDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintStart_toStartOf="@+id/btnDivide"
        app:layout_constraintTop_toBottomOf="@+id/bynMinus"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pressDigit"
        android:text="@string/_0"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnComma"
        app:layout_constraintEnd_toStartOf="@+id/btnComma"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnComma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pressDigit"
        android:text="@string/comma"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnEqual"
        app:layout_constraintEnd_toStartOf="@+id/btnEqual"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnDivide"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnComma" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="clickOperation"
        android:text="@string/divide"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnEqual"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiply"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>